--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "baris",
   "description": "Runs the git clean command made famous by Baris",
-  "version": "0.0.2",
+  "bin": {
+    "baris": "./index.js"
+  },
+  "version": "0.0.3",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
