--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "baris",
   "description": "Runs the git clean command made famous by Baris",
-  "bin": {
-    "baris": "./index.js"
-  },
-  "version": "0.0.3",
+  "bin": "./index.js",
+  "version": "0.0.4",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
